fix fact cards and uninav z-index
chatbot was having overlap issues with the uninav so turning down z-index to fix

--- a/app/assets/stylesheets/omni_nav/uninav/uninav.scss
+++ b/app/assets/stylesheets/omni_nav/uninav/uninav.scss
@@ -98,7 +98,7 @@ html {
   flex-wrap: wrap;
   background-color: $white;
   top: 0;
-  z-index: 999999999;
+  z-index: 1000000;
 
   @include respond(phone) {
     flex-wrap: nowrap;
